2002-02-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Fix some maptable problems when using non-local
	reference counts.
	* Source/NSMapTable.m: Improve warning logging for dodgy practices.
	* Source/NSHashTable.m: ditto

2002-02-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/manual: New directory containing Objective-C and
	GNUstep-base programming manual/tutorial produced at Brainstorm.
	The intention was to produce a pretty complete manual and then
	release it, but we ran out of funding, so I'm releasing the work
	to date.
	* Source/NSObject.m: Go back to using local refcounts now that new
	map table code is thoroughly tested.

2002-02-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Makefile.preamble: remove old GSI api support
	* Headers/Foundation/NSHashTable.h: ditto
	* Headers/Foundation/NSMapTable.h: ditto

2002-02-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSAttributedString.m: Move to assuming new GSI api.
	* Source/NSHashTable.m: ditto
	* Source/NSMapTable.m: ditto
	* Source/GSCountedSet.m: ditto
	* Source/GSDictionary.m: ditto
	* Source/GSFFCallInvocation.m: ditto
	* Source/NSArchiver.m: ditto
	* Source/NSConnection.m: ditto
	* Source/NSFileManager.m: ditto
	* Source/NSNotificationCenter.m: ditto
	* Source/NSObject.m: ditto
	* Source/NSPortCoder.m: ditto
	* Source/NSRunLoop.m: ditto
	* Source/NSSerializer.m: ditto
	* Source/NSUnarchiver.m: ditto

2002-02-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSHashTable.m: Fixed bug intorduced by last change to add
	error checking!!
	* Source/GSAttributedString.m: Make new or old GSI stuff optional.
	* Source/GSCountedSet.m: ditto
	* Source/GSDictionary.m: ditto
	* Source/GSFFCallInvocation.m: ditto
	* Source/NSArchiver.m: ditto
	* Source/NSConnection.m: ditto
	* Source/NSFileManager.m: ditto
	* Source/NSNotificationCenter.m: ditto
	* Source/NSObject.m: ditto
	* Source/NSPortCoder.m: ditto
	* Source/NSRunLoop.m: ditto
	* Source/NSSerializer.m: ditto